@@ -14,6 +14,8 @@
 // along with Heimer. If not, see <http://www.gnu.org/licenses/>.
 
 #include "magic_zoom.hpp"
+
+#include "constants.hpp"
 #include "node.hpp"
 
 #include <cmath>
@@ -22,13 +24,11 @@ QRectF MagicZoom::calculateRectangle(const ItemList & items, bool isForExport)
 {
     double nodeArea = 0;
     QRectF rect;
-    int nodes = 0;
     for (auto && item : items) {
         if (const auto node = dynamic_cast<Node *>(item)) {
             const auto nodeRect = node->placementBoundingRect();
             rect = rect.united(nodeRect.translated(node->pos().x(), node->pos().y()));
             nodeArea += nodeRect.width() * nodeRect.height();
-            nodes++;
         }
     }
 
@@ -42,6 +42,7 @@ QRectF MagicZoom::calculateRectangle(const ItemList & items, bool isForExport)
     // density and node count. For example, if we have just a single node we don't want it to
     // be super big and cover the whole screen.
     const double density = nodeArea / rect.width() / rect.height();
-    const double adjust = 3.0 * std::max(density * rect.width(), density * rect.height()) / pow(nodes, 1.5);
+    const int avgNodeCount = nodeArea / Constants::Node::MIN_WIDTH / Constants::Node::MIN_HEIGHT;
+    const double adjust = 3.0 * std::max(density * rect.width(), density * rect.height()) / pow(avgNodeCount, 1.5);
     return rect.adjusted(-adjust / 2, -adjust / 2, adjust / 2, adjust / 2).adjusted(-margin, -margin, margin, margin);
 }
